--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,5 +3,9 @@ AllCops:
     - './bin/*'
 Metrics/LineLength:
   Max: 200
+Metrics/BlockLength:
+  Max: 50
+Metrics/MethodLength:
+  Max: 30
 Documentation:
   Enabled: false
